<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="Param_NC" Id="{189601e5-5931-4893-8403-89fda2ffdaaf}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	gc_NC_Max	:INT	:=4;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>